--- a/drafts/widgets.html
+++ b/drafts/widgets.html
@@ -13,7 +13,7 @@
 <link rel="modulepreload" href="../_observablehq/runtime.js">
 <link rel="modulepreload" href="../_observablehq/stdlib.js">
 <link rel="modulepreload" href="../_import/components/decarb-model/budget-allocator.5c9a0a07.js">
-<link rel="modulepreload" href="../_import/components/miniDecarbModel.8cfae499.js">
+<link rel="modulepreload" href="../components/miniDecarbModel.js">
 <link rel="modulepreload" href="../_npm/d3@7.9.0/_esm.js">
 <link rel="modulepreload" href="../_npm/lodash@4.17.21/_esm.js">
 <link rel="modulepreload" href="../_observablehq/stdlib/duckdb.js">
@@ -66,11 +66,11 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737979215358});
+registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1738708974068});
 registerTable("oxford", FileAttachment("../data/oxford_decarbonisation_data.parquet"));
 
 define({id: "5ffecf52", outputs: ["BudgetAllocator","MiniDecarbModel"], body: async () => {
-const [{BudgetAllocator}, {MiniDecarbModel}] = await Promise.all([import("../_import/components/decarb-model/budget-allocator.5c9a0a07.js"), import("../_import/components/miniDecarbModel.8cfae499.js")]);
+const [{BudgetAllocator}, {MiniDecarbModel}] = await Promise.all([import("../_import/components/decarb-model/budget-allocator.5c9a0a07.js"), import("./../components/miniDecarbModel.js")]);
 
 return {BudgetAllocator,MiniDecarbModel};
 }});
